--- a/about.html
+++ b/about.html
@@ -38,13 +38,13 @@
 </head>
 
 <body>
-    <div class="topnav">
+    <div class="topnav"><!--menu-->
         <a class="active" href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="prod.html">Products</a>
       </div>
-      <div id="divabout"style="" >
+      <div id="divabout"style="" ><!-- about para-->
         <div ><h2   id="about">About</h2></div>
         <div ><div id="aboutdivp"> <p id="aboutp">At Munamii Cakery, each cake, each box of cupcakes that we make has a very special<br>
             value for us. We not only want to bring a dessert to your table but rather a unique<br>
@@ -53,11 +53,11 @@
             our website.
             </p></div>
        
-                 <div style="display:inline-block"><img id="imgisa"  src="images/aboutpng.png"/>
+                 <div style="display:inline-block"><img id="imgisa"  src="images/aboutpng.png"/> <!-- about img  with name-->
                     <p  id="pisa"style="">Isabela Carmignani<br>
 
                                               founding owner</p></div>
-                                              <footer style="margin-top: 300px;">
+                                              <footer style="margin-top: 300px;"> <!-- footer with contact icons-->
                                                 <div id="foot" style="text-align:center"><a href="https://www.facebook.com/munamiicupcakes/" target="_blank" class="fa fa-facebook"></a><a href="https://www.facebook.com/munamiicupcakes/" target="blank">munamiicupcakes</a>
                                                     <a href="https://www.instagram.com/munamii.cakery/" target="_blank"class="fa fa-instagram"></a>  <a href="https://www.instagram.com/munamii.cakery/" target="blank">@munamii.cakery</a></div>
                                                    
